tests/data/placebo/test_security_group_set_permissions/config.SelectResourceConfig_1.json
{
    "status_code": 200,
    "data": {
        "Results": [
            "{\"configuration\":{\"groupName\":\"launch-wizard-11\",\"groupId\":\"sg-04ececeaf1ed666cb\",\"vpcId\":\"vpc-d2d616b5\",\"ipPermissionsEgress\":[{\"ipRanges\":[\"0.0.0.0/0\"],\"prefixListIds\":[],\"userIdGroupPairs\":[],\"ipProtocol\":\"-1\",\"ipv4Ranges\":[{\"cidrIp\":\"0.0.0.0/0\"}],\"ipv6Ranges\":[]}],\"description\":\"launch-wizard-11 created 2020-03-18T16:43:39.293-04:00\",\"ownerId\":\"644160558196\",\"ipPermissions\":[{\"ipRanges\":[\"0.0.0.0/0\"],\"prefixListIds\":[],\"fromPo [...]
        ],
        "QueryInfo": {
            "SelectFields": [
                {
                    "Name": "configuration"
                },
                {
                    "Name": "supplementaryConfiguration"
                }
            ]
        },
        "ResponseMetadata": {}
    }
}
